--- a/example/7B.yaml
+++ b/example/7B.yaml
@@ -1,11 +1,11 @@
 # data
 data:
-  instruct_data: ""  # Fill
+  instruct_data: "/home/arresejo/data/chip8_chunk_train.jsonl"  # Fill
   data: ""  # Optionally fill with pretraining data 
-  eval_instruct_data: ""  # Optionally fill
+  eval_instruct_data: "/home/arresejo/data/chip8_chunk_eval.jsonl"  # Optionally fill
 
 # model
-model_id_or_path: ""  # Change to downloaded path
+model_id_or_path: "/home/arresejo/mistral_models"  # Change to downloaded path
 lora:
   rank: 64
 
@@ -30,7 +30,7 @@ save_adapters: True  # save only trained LoRA adapters. Set to `False` to merge 
 run_dir: ""  # Fill
 
 wandb:
-  project: "" # your wandb project name
+  project: "chip8_project" # your wandb project name
   run_name: "" # your wandb run name
   key: "" # your wandb api key
   offline: False
